# terminal-raycast

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.bat  build.sh
src/: KeyChecker.cpp  KeyChecker.hpp  Vector2.cpp  Vector2.hpp  crossPlatformCurses.hpp  main.cpp  misc.hpp  render.cpp  render.hpp  structs.hpp
